[project]
name = "arma3-leaflet-map"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "msgspec>=0.20.0",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.19",
]

[tool.ruff.lint]
future-annotations = true
select = ["ALL"]
ignore = [
    # Rules that conflict with Ruff formatter, or conflict with other rules:
    "COM812",  # missing-trailing-comma
    "D203",    # incorrect-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    # Other
    "ERA001",  # commented-out-code
    "D105",  # undocumented-magic-method
]