[project]
name = "arma3-leaflet-map"
version = "0.3.0"
description = "Leaflet interactive maps for Arma 3"
requires-python = ">=3.12"
dependencies = [
    "arma3-offline-map-lib",
    "folium>=0.20.0",
    "msgspec>=0.21.1",
    "rich>=15.0.0",
]
extend-safe-fixes = [
    "TC", # flake8-type-checking
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.ruff.lint]
future-annotations = true
select = ["ALL"]
ignore = [
    # Rules that conflict with Ruff formatter, or conflict with other rules:
    "COM812",  # missing-trailing-comma
    "D203",    # incorrect-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    # Other
    "ERA001",  # commented-out-code
    "D105",  # undocumented-magic-method
    "D205",  # missing-blank-line-after-summary
]
extend-safe-fixes = [
    "TC", # flake8-type-checking
]

[tool.uv.sources]
arma3-offline-map-lib = { git = "https://github.com/recreational-projects/arma3-offline-map-lib.git", rev = "v0.3.0" }
