[project]
name = "arma3-leaflet-map"
version = "0.5.0"
description = "Leaflet interactive maps for Arma 3"
requires-python = ">=3.12"
dependencies = [
    "arma3-offline-map-lib",
    "folium>=0.20.0",
    "matplotlib>=3.11.0",
    "msgspec>=0.21.1",
    "pillow>=12.2.0",
    "rich>=15.0.0",
]
extend-safe-fixes = [
    "TC", # flake8-type-checking
]

[dependency-groups]
dev = [
    "ruff>=0.15.19",
    "ty>=0.0.53",
]

[tool.ruff.lint]
future-annotations = true
select = ["ALL"]
ignore = [
    # Rules that conflict with Ruff formatter, or conflict with other rules:
    "COM812",  # missing-trailing-comma
    "D203",    # incorrect-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    # Other
    "ERA001",  # commented-out-code
    "D105",  # undocumented-magic-method
    "D205",  # missing-blank-line-after-summary
    "N806",  # non-lowercase-variable-in-function
    "PLR0913", # too-many-arguments
]
extend-safe-fixes = [
    "TC", # flake8-type-checking
]

[tool.uv.sources]
arma3-offline-map-lib = { git = "https://github.com/recreational-projects/arma3-offline-map-lib.git", rev = "v0.5.0" }

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
disable-search-path-heuristics = true
search-path = ["."]
